Переписан tg_gate.py на python-telegram-bot. Исправлена ошибка в webserver.py с совпадением имени функции с импортируемой из bottle.py. Добавлен скрипт запуска системы. Актуализирован config.json.

--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
+	"host": "",
 	"tg": {
 		"enabled": true,
 		"token": "",
-		"chat": false,
+		"chat":  false,
+		"proxy": "",
 		"in": "/tmp/tg_in",
 		"out": "/tmp/tg_out"
 	},
